--- a/css/estilosClasificacion.css
+++ b/css/estilosClasificacion.css
@@ -105,6 +105,9 @@ tr:nth-child(even){
 #showFour{
     border:1px solid blue;
 }
+#showFive{
+    border:1px solid blue;
+}
 .seleccion{  
   margin: auto;
   margin-top: 30px;
