--- a/css/estilosRanked.css
+++ b/css/estilosRanked.css
@@ -32,6 +32,20 @@ margin:auto;
   margin-right: auto;
 
 }
+.button2 {
+  background-color: darkred; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 35px;
+
+}
 @media (max-width: 1200px){
 	.rankedDivisions img{
 	width: 75%;
